<resources>
    <string name="app_name">clo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="all_course_page">ALL COURSE PAGE\n</string>
    <string name="submit">SUBMIT\n</string>
    <string name="download_pdf">"download "</string>
    <string name="create_an_account">Create an account\n</string>
    <string name="login">Login\n</string>
    <string name="forgot_password">Forgot Password\n</string>
    <string name="show_password">Show Password\n</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="reset">Reset\n</string>
    <string name="already_have_an_account">Already Have an account</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_registered_email_address">Enter your registered Email address</string>
</resources>