<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="374dp"
        android:layout_height="537dp"
        android:layout_margin="10dp"
        android:backgroundTint="#E75DFF"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/gradient"
            android:backgroundTint="#16161D"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="303dp"
                android:layout_height="167dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="292dp"
                    android:layout_height="167dp"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/code_sage_txt_logo" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/emailBoxlogin"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/outline_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="#E91E63"
                android:textColorHint="#E91E63" />

            <EditText
                android:id="@+id/passwordBoxlogin"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#E91E63"
                android:textColorHint="#E91E63" />

            <LinearLayout
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="49dp"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/show_password"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBoxRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="49dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/remember_me"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|left"
                android:layout_marginStart="8dp"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:backgroundTint="#1ACAB0"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/createBtnlogin"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#ED3171"
                android:text="@string/create_an_account" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>